# client_banking

./: .coverage  .gitignore  README.md  func.py  main.py  pyproject.toml  requirements.txt
tests/: test_item.py
