[tool.poetry]
name = "transactions"
version = "0.1.0"
description = "код для виджета \"Операции по счетам\""
authors = ["SagertStav <biryukovsrg@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyunpack = "^0.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
